small lesson style update and long btns on ios fix

--- a/app/javascript/src/learn/learn.scss
+++ b/app/javascript/src/learn/learn.scss
@@ -41,6 +41,9 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  position: sticky;
+  top: 0;
+  background-color: white;
   .lesson-title {
     font-weight: 200;
     font-size: 100px;
@@ -85,7 +88,7 @@ body {
   align-items: center;
   @media screen and (max-width: 768px) {
     position: sticky;
-    top: 0;
+    top: 44px;
     padding-top: 3px;
     padding-bottom: 3px;
     background-color: white;
